managed-certificates/managed-cert-ingress-mongo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managed-cert-ingress-mongo
  annotations:
    kubernetes.io/ingress.global-static-ip-name: vuscgrp
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: mongo-express-service
      port:
        number: 8081
